--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+    <header>
+        <h1>
+            This is an AI generator!
+        </h1>
+    </header>
+ <section class="class-images"></section>
+ <section class="input-container"></section>
+
     <script src="app.js"></script>
 </body>
 </html>
